gw-mtls-service/mtls-grpc-gateway.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gw-mtls-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gw-mtls-service
  template:
    metadata:
      labels:
        app: gw-mtls-service
    spec:
      containers:
      - name: gw-mtls-service
        image: ./gw-mtls-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: net-mtls-service
spec:
  selector:
    app: gw-mtls-service
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
  type: NodePort
